fixed img bug on ios

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,8 +48,7 @@ h1 {
 
         &__pic {
             width: auto;
-            height: auto;
-            max-width: 50%;
+            max-width: 50vw;
             align-self: center;
             border-radius: 50%;
             margin: 0 auto;
